k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: production
  labels:
    app: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
